# cookiecutter-Python-Template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: test-ci.yaml
tests/behaviour/features/: cookiecutter.feature  test_cookiecutter.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: test-ci.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/args/: parse_args.py
{{cookiecutter.project_name}}/tests/unit/: args_test.py  main_test.py
